events/static/home.css
/* Main body style */
body {      

    color: #333; /* Darker color for text for better readability */
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    margin: 0;
    padding: 20px;
    box-sizing: border-box;
}

/* Header style */
h1 {
    color: #444; /* Darker shade for modern look */
    text-align: center;
    font-size: 2.5em;
    margin-top: 0;
}

/* Unordered list style */
ul {
    list-style-type: none;
    padding: 0;
    max-width: 400px;
    margin: 20px auto;
}

/* List item style */
ul li {
    background-color: white;
    margin-bottom: 10px;
    padding: 10px;
    border-radius: 4px;
    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
}

